# challenge-todo-app

./: pubspec.yaml
lib/: create_todo.dart  main.dart  todo_card.dart  todos.dart
lib/models/: todos.dart
lib/network/: todos_request.dart
lib/network/constants/: api_url.dart
lib/state/: todos.dart
server/: alembic.ini  main.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 014851ca5083_.py  6dc43eaf8be8_.py  fc6032acf851_.py
server/api/: todos.py
server/api/utils/: todos.py
server/app/: app.py
server/db/: db_setup.py
server/db/models/: todos.py
server/pydantic_schemas/: tasks.py  todos.py
