[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Arthur Schmidt <sepiol.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.4.42"
uvicorn = "^0.19.0"
fastapi = "^0.85.1"
psycopg2-binary = "^2.9.4"
alembic = "^1.8.1"
sqlalchemy-utils = "^0.38.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
